--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome!</title>
-    <link rel="stylesheet" href="cssman">
+    <link rel="stylesheet" href="cssman.css">
 </head>
 <body>
     <h1>Welcome!</h1>
