--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Welcome!</h1>
-    <p>This <a href="https://google.com">site</a> is unfinshed- </p>
+    <p>This <a href="mid">site</a> is unfinshed- </p>
     <p>Come back soon!</p>
 </body>
 </html>
