--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Welcome!</h1>
     <p>This <a href="mid">site</a> is unfinshed- </p>
-    <p>Come back soon!</p>
+    <p>Come back soon :)!</p>
 </body>
 </html>
