--- a/mid.html
+++ b/mid.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>:(</title>
-    <link rel="stylesheet" href="cssman">
+    <link rel="stylesheet" href="cssman.css">
 </head>
 <body>
     <h1>YOWZA</h1>
