--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <p>Mauvais Lien :(</p>
-    <a href="/saint">Faits d'esprit saint</a>
+    <a href="/saint/index.mhtml">Faits d'esprit saint</a>
 </body>
 </html>
